# Cheat_Sheets

./: .gitmodules  Latex.md  LibreTemplate.odt  README.md  UNIX.md  rEFInd.md
C/: Embedded_Float-String.md
C++/ProtoBuf/: CMakeLists.txt  Readme.md  main.cpp  partbook.proto
C++/ProtoBuf/Ex/: can.proto  main.cpp
C++/Serial/: transmit.cpp
C++/UDP/Reciever/: recieve.cpp
Electronics/: CAN Cheats.md
Electronics/Peripherals/DotMatrix_Displays/: 128x64.xcf  128x64_Wally.xcf  Digole 128x64Dots ST7920.xlsx  pixel_wally.xcf  ~$Digole 128x64Dots ST7920.xlsx
Periferals/SD_Card/: Resources.md
Periferals/USB/: References.md
Python/: GitPusher  GlobalScripts.md  Images.md  OS_Commands_and_Arguements.md  pyPlot.md  pySerial.md  textManipulation.md
STM32_HAL/: I2C.md  SPI.md  UART.md  UART2_Test.c
STM32_HAL/HAL_USB_VCM/.metadata/: version.ini
STM32_HAL/HAL_USB_VCM/.metadata/.plugins/org.eclipse.cdt.core/: Cube_TEST.language.settings.xml  USB_F3_Test.language.settings.xml  hal_decoy.language.settings.xml  stm32f3discovery_hal_lib.language.settings.xml
STM32_HAL/HAL_USB_VCM/.metadata/.plugins/org.eclipse.cdt.ui/: dialog_settings.xml
STM32_HAL/HAL_USB_VCM/.metadata/.plugins/org.eclipse.core.resources/.root/: 2.tree
STM32_HAL/HAL_USB_VCM/.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
STM32_HAL/HAL_USB_VCM/.metadata/.plugins/org.eclipse.debug.ui/: launchConfigurationHistory.xml
STM32_HAL/HAL_USB_VCM/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
STM32_HAL/HAL_USB_VCM/.metadata/.plugins/org.eclipse.epp.logging.aeri.ide/org.eclipse.epp.logging.aeri.ide.server/: server-config.json
STM32_HAL/HAL_USB_VCM/.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
STM32_HAL/HAL_USB_VCM/.metadata/.plugins/org.eclipse.wst.sse.core/: task-tags.properties
STM32_HAL/HAL_USB_VCM/USB_F3_Test/: .project
STM32_HAL/HAL_USB_VCM/USB_F3_Test/CUBE/: .cproject  .project  CUBE.ioc
STM32_HAL/HAL_USB_VCM/USB_F3_Test/CUBE/Inc/: stm32f3xx_hal_conf.h
STM32_HAL/HAL_USB_VCM/USB_F3_Test/CUBE/Src/: main.c  usbd_conf.c  usbd_desc.c
STM32_HAL/HAL_USB_VCM/USB_F3_Test/Cube_TEST/: .project  Cube_TEST.ioc
STM32_HAL/HAL_USB_VCM/stm32f3discovery_hal_lib/: .project
Software_and_Programming/: README.md  tail_loop
Software_and_Programming/C++/JSON/: CMakeLists.txt  main.cpp
Software_and_Programming/C++/ProtoBuf/Ex/: Makefile
Software_and_Programming/C++/Serial/: CMakeLists.txt  Readme.md  recieve.cpp
Software_and_Programming/C++/Serial/Recieve/: CMakeLists.txt  recieve.cpp
Software_and_Programming/C++/TCP/: TCP_Server.cpp  client  client.cpp  client_app.cpp  server  server.cpp  server_app.cpp
Software_and_Programming/C++/UDP/Reciever/: CMakeLists.txt  recieve.cpp
Software_and_Programming/C++/UDP/Sender/: CMakeLists.txt  Resources.md  main.cpp
Software_and_Programming/C/String To Integer/: CMakeLists.txt  string_to_int.c
Software_and_Programming/CMake/: CLion Addon.txt  aCMakeLists.txt  tutorials.md
Software_and_Programming/Python/: DataProcessing.md
Software_and_Programming/Raspberry Pi/: Disable BT.md
Software_and_Programming/STM32_HAL/: General_HAL.md  I2C.md  UART_Callback.c  Useful_References.md
Software_and_Programming/STM32_HAL/HAL_F0/: CAN.c
Software_and_Programming/STM32_HAL/HAL_F1/: CAN.md  SPI.md  UART.c
Software_and_Programming/STM32_HAL/HAL_USB_VCM/USB_F3_Test/CUBE/: .mxproject  .project.bak
Software_and_Programming/STM32_HAL/HAL_USB_VCM/USB_F3_Test/Cube_TEST/: .cproject  .mxproject
Software_and_Programming/STM32_HAL/Std Peripheral Lib F3/: Timer Interrupts.c
(+34 files in other folders)
